# Sony-Camset-File-Parser

./: .gitignore  README.md
cpp/: CMakeLists.txt  camset.h  main.cpp
docs/: investigation.md
rust/: Cargo.toml
rust/src/: main.rs
